==> zephyrproject-rtos/zephyr/drivers/counter/counter_max32_rtc.c <==
#define DT_DRV_COMPAT adi_max32_rtc_counter
#include <zephyr/drivers/counter.h>
#include <zephyr/drivers/clock_control/adi_max32_clock_control.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/irq.h>
#include <rtc.h>
#include <wrap_max32_lp.h>
#define MAX32_RTC_COUNTER_FREQ 1
#define MAX32_RTC_COUNTER_MAX_VALUE ((1 << 21) - 1)
#define MAX32_RTC_COUNTER_INT_FL MXC_RTC_INT_FL_LONG
#define MAX32_RTC_COUNTER_INT_EN MXC_RTC_INT_EN_LONG

static void rtc_max32_isr(const struct device *dev)
{
	struct max32_rtc_data *const data = dev->data;
	int flags = MXC_RTC_GetFlags();

	if (flags & MAX32_RTC_COUNTER_INT_FL) {
		if (data->alarm_callback) {
			counter_alarm_callback_t cb;
			uint32_t current;

			api_get_value(dev, &current);

			cb = data->alarm_callback;
			data->alarm_callback = NULL;
			cb(dev, 0, current, data->alarm_user_data);
		}
	}

	/* Clear all flags */
	MXC_RTC_ClearFlags(flags);
}

static int rtc_max32_init(const struct device *dev)
{
	const struct max32_rtc_config *cfg = dev->config;

	while (MXC_RTC_Init(0, 0) == E_BUSY) {
		;
	}

	api_stop(dev);

	cfg->irq_func();

	return 0;
}
